--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carmen's Portfolio</title>
+    <link rel="stylesheet" href="/public/style.css" />
+    <link rel="icon" type="image/png" href="/public/assets/ghost8.png"/>
 </head>
 <body>
     <div id="app"></div>
